--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
 
 <body>
     <header class="container">
-        <nav class="navbar fixed-top navbar-light bg-light header">
-            <div class="logo">
-                <img src="./imagenes/logo.jpg" alt="" class="alineado clave">
-                <h3 class="alineado encabezado">Mica Schiller</h3>
-            </div>
-            <ul class="alineado menu">
-                <li class="alineado"><a href="#inicio">Inicio</a></li>
-                <li class="alineado"><a href="#miscovers">Mis covers</a></li>
-                <li class="alineado"><a href="#sobremi">Sobre mi</a></li>
-                <li class="alineado"><a href="#eventos">Eventos</a></li>
-                <li class="alineado"><a href="#contrataciones">Contrataciones</a></li>
-            </ul>
-        </nav>
+        <ul class="nav justify-content-between">
+            <li class="nav-item">
+              <a class="nav-link active" href="#miscovers">Mis covers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#sobremi">Sobre mi</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="text-align: center;" href="#inicio">
+                        <img src="./imagenes/logo.png" alt="" class="alineado clave">
+                </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#eventos">Eventos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contrataciones">Contrataciones</a>
+              </li>
+          </ul>
     </header>
     <section id="inicio" class="seccion">
-        <div class="orden modificado">
+       <!-- <div class="orden modificado">
             <h1 class="titulo">Micaela Schiller</h1>
             <p class="parrafo">
                 Desde que era muy pequeña, me sentí atraída por el mundo de la música.En el año 2015 realice mis
@@ -49,12 +55,15 @@
                 <a class="redes" href="https://twitter.com/micu_sch"><span class="icon-twitter"></span></a>
                 <a class="redes" href="https://www.youtube.com/channel/UCvgeGDMuMif-PjS7lbDlvGQ"><span
                         class="icon-youtube"></span></a>
-            </div>
+            </div>-->
             <!--LOGO INSTAGRAM, FACEBOOK, YOUTUBE,TWITTER-->
         </div>
         <!--IMAGEN-->
-        <img src="./imagenes/mica.png" class="foto">
+       <!-- <img src="./imagenes/mica.png" class="foto"> -->
     </section>
+
+
+
     </br>
     <section id="miscovers" class="container">
         <nav class="cover row">
