--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="cantante covers solista mica schiller">
     <title>Micu Schiller Cantante</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
@@ -18,28 +18,28 @@
 
 <body>
     <header class="container">
-        <ul class="nav justify-content-between">
+        <ul class="nav justify-content-between" style="align-items: center;">
             <li class="nav-item">
-              <a class="nav-link active" href="#miscovers">Mis covers</a>
+                <a class="nav-link active" href="#miscovers">Mis covers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#sobremi">Sobre mi</a>
+                <a class="nav-link" href="#sobremi">Sobre mi</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="text-align: center;" href="#inicio">
-                        <img src="./imagenes/logo.png" alt="" class="alineado clave">
+                    <img src="./imagenes/logo.png" alt="" class="alineado clave">
                 </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#eventos">Eventos</a>
+                <a class="nav-link" href="#eventos">Eventos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#contrataciones">Contrataciones</a>
-              </li>
-          </ul>
+            </li>
+        </ul>
     </header>
     <section id="inicio" class="seccion">
-       <!-- <div class="orden modificado">
+        <!-- <div class="orden modificado">
             <h1 class="titulo">Micaela Schiller</h1>
             <p class="parrafo">
                 Desde que era muy pequeña, me sentí atraída por el mundo de la música.En el año 2015 realice mis
@@ -56,10 +56,57 @@
                 <a class="redes" href="https://www.youtube.com/channel/UCvgeGDMuMif-PjS7lbDlvGQ"><span
                         class="icon-youtube"></span></a>
             </div>-->
-            <!--LOGO INSTAGRAM, FACEBOOK, YOUTUBE,TWITTER-->
-        </div>
+        <!--LOGO INSTAGRAM, FACEBOOK, YOUTUBE,TWITTER-->
+        <!-- </div> -->
         <!--IMAGEN-->
-       <!-- <img src="./imagenes/mica.png" class="foto"> -->
+        <!-- <img src="./imagenes/mica.png" class="foto"> -->
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="width: 100%;">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./imagenes/carrusel0.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1 class="titulo">Micaela Schiller</h1>
+                        <div class="iconos">
+                            <a class="redes" href="https://www.instagram.com/micu.sch/?hl=es-la"><span
+                                    class="icon-instagram"></span></a>
+                            <a class="redes" href="https://twitter.com/micu_sch"><span class="icon-twitter"></span></a>
+                            <a class="redes" href="https://www.youtube.com/channel/UCvgeGDMuMif-PjS7lbDlvGQ"><span
+                                    class="icon-youtube"></span></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./imagenes/carrusel1.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel">Desde que era muy pequeña, me sentí atraída por el mundo de la música.En el año 2015 realice mis
+                            primeros
+                            covers y tuve varias presentaciones con las que continuo hasta hoy en día.</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./imagenes/carrusel2.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carousel">Actualmente me encuentro en la búsqueda mi
+                            de
+                            propio sueño que es vivir de la música.</h5>
+                    </div>
+                </div> 
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </section>
 
 
@@ -176,7 +223,8 @@
                             <p>4</p>
                         </td>
                         <td class="evento" data-toggle="modal" data-target="#Modal5">
-                            <p style="margin-bottom: 0px;">5 <br><span style="font-size: 8px;"> Click para más info..</span></p>
+                            <p style="margin-bottom: 0px;">5 <br><span style="font-size: 8px;"> Click para más
+                                    info..</span></p>
                         </td>
                     </tr>
                     <tr class="table-danger">
@@ -196,7 +244,8 @@
                             <p>10</p>
                         </td>
                         <td class="evento" data-toggle="modal" data-target="#Modal11">
-                            <p style="margin-bottom: 0px;">11 <br><span style="font-size: 8px;"> Click para más info..</span></p>
+                            <p style="margin-bottom: 0px;">11 <br><span style="font-size: 8px;"> Click para más
+                                    info..</span></p>
                         </td>
                         <td>
                             <p>12</p>
@@ -216,7 +265,8 @@
                             <p>16</p>
                         </td>
                         <td class="evento" data-toggle="modal" data-target="#Modal17">
-                            <p style="margin-bottom: 0px;">17 <br><span style="font-size: 8px;"> Click para más info..</span></p>
+                            <p style="margin-bottom: 0px;">17 <br><span style="font-size: 8px;"> Click para más
+                                    info..</span></p>
                         </td>
                         <td>
                             <p>18</p>
@@ -233,7 +283,8 @@
                             <p>21</p>
                         </td>
                         <td class="evento" data-toggle="modal" data-target="#Modal22">
-                            <p style="margin-bottom: 0px;">22 <br><span style="font-size: 8px;"> Click para más info..</span></p>
+                            <p style="margin-bottom: 0px;">22 <br><span style="font-size: 8px;"> Click para más
+                                    info..</span></p>
                         </td>
                         <td>
                             <p>23</p>
@@ -383,11 +434,11 @@
             <div class="form-group row justify-content-center">
                 <label class="col-2" for="hola">Tipo de consulta:</label>
                 <div class="col-4">
-                <select id="hola" class="form-control">
-                    <option value="coti">Cotización</option>
-                    <option value="contra">Contratación</option>
-                    <option value="otros">Otros</option>
-                </select>
+                    <select id="hola" class="form-control">
+                        <option value="coti">Cotización</option>
+                        <option value="contra">Contratación</option>
+                        <option value="otros">Otros</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group row justify-content-center">
