--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </header>
     <section id="inicio" class="seccion">
         <img src="imagenes/principal2.jpeg" alt="" style="width: 100%;">
+        <a href=""></a>
     </section>
 
 
