--- a/index.html
+++ b/index.html
@@ -39,12 +39,22 @@
         </ul>
     </header>
     <section id="inicio" class="seccion">
-        <img src="imagenes/principal2.jpeg" alt="" style="width: 100%;">
-        <a href=""></a>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="width: 100%;">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="imagenes/principal1.jpeg" alt="" style="width: 100%;">
+                    <div class="carousel-caption">
+                        <a class="redes" href="https://www.facebook.com/miicaa.schiller"><span class="icon-facebook"></span></a>
+                        <a class="redes" href="https://www.instagram.com/micu.sch/?hl=es-la"><span
+                                class="icon-instagram"></span></a>
+                        <a class="redes" href="https://twitter.com/micu_sch"><span class="icon-twitter"></span></a>
+                        <a class="redes" href="https://www.youtube.com/channel/UCvgeGDMuMif-PjS7lbDlvGQ"><span
+                                class="icon-youtube"></span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-
-
-
     </br>
     <section id="miscovers" class="container">
         <nav class="cover row">
@@ -88,9 +98,6 @@
                     allowfullscreen>
                 </iframe>
             </div>
-        </div>
-        <div class="videoPadre row justify-content-center">
-            <button type="button" class="btn btn-light boton">Ver más..</button>
         </div>
         <nav class="ultimo">
             <div> <span class="icon-heart-outlined"></span><i>Cumple sus sueños, quien lucha por ellos</i><span
@@ -358,10 +365,15 @@
         <p class="pie-pagina"><i>Página sin fines de lucro</i></p>
 
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <script src="index.js"></script>
 </body>
-
